<resources>
  <string name="app_name">TrendFeeder</string>
  <string name="action_settings">Settings</string>
  <string name="desc_locked">App requires authentication before continuing</string>
  <string name="preferences_team">Select the team you wish to view trends for.</string>
  <string name="preferences_season">Select the season to view trends for.</string>
  <string name="none">None</string>
  <string name="status_authenticating">Authenticating…</string>
  <string name="placeholder">TBD</string>
  <string name="full_time">FT</string>
  <string name="in_progress">In progress</string>
  <string name="no_matches">No data, change Team and/or Season via Settings.</string>
  <string name="create">Create</string>
  <string name="err_missing_home_selection">Please select a home team.</string>
  <string name="err_missing_away_selection">Please select an away team.</string>
  <string name="err_same_selection">Home and Away teams must be different.</string>
  <string name="update">Update</string>
  <string name="is_final">Is Final?</string>
  <string name="err_no_away_score">Missing score for away team.</string>
  <string name="err_no_home_score">Missing score for home team.</string>
  <plurals name="subtitle">
    <item quantity="one">%s - %d match</item>
    <item quantity="other">%s - %d matches</item>
  </plurals>
  <string name="checking_data">Checking data…</string>
  <string name="generating_trends">Generating Trends…</string>
  <string name="hint_away_score">Score for away team</string>
  <string name="hint_score_home">Score for home team</string>
  <string name="err_match_not_created">Failed to create match. Permissions?</string>
  <string name="err_trends_not_created">Failed to generate trends. Permissions?</string>
  <string name="err_match_not_updated">Could not update match details. Permissions?</string>
  <string name="err_missing_preferences">Missing user preferences; halting trend generation.</string>
  <string name="desc_add_match">Click to add a match</string>
  <string name="desc_matches_list">List of matches</string>
  <string name="upcoming">Upcoming</string>
  <string name="delayed">Results Delayed</string>
  <string name="versus">vs.</string>
  <string name="select_home_team">Select home team</string>
  <string name="select_away_team">Select away team</string>
  <string name="empty_default">Select an existing match or create a new match.</string>
  <string name="err_match_not_deleted">Could not delete match.</string>
  <string name="err_team_data_load_failed">Failed to load team data.</string>
  <string name="err_team_not_created">Could not create team.</string>
  <string name="err_match_summary_data_load_failed">Failed to load match summary data.</string>
  <string name="err_match_summary_data_cleanup_failed">Clean-up of match summary data failed.</string>
  <string name="err_team_data_cleanup_failed">Clean-up of team data failed.</string>
  <string name="action_create">Create Match</string>
  <string name="action_generate">Generate Trends</string>
</resources>
