<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/details_text_home"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="end"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/details_edit_home_score"
    app:layout_constraintEnd_toStartOf="@+id/details_guideline"
    app:layout_constraintTop_toTopOf="@+id/details_edit_home_score"/>
  <EditText
    android:id="@+id/details_edit_home_score"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:ems="5"
    android:inputType="number"
    android:hint="@string/hint_score_home"
    android:textAlignment="center"
    app:layout_constraintStart_toEndOf="@+id/details_guideline"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/details_text_away"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="end"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@+id/details_edit_away_score"
    app:layout_constraintEnd_toStartOf="@+id/details_guideline"
    app:layout_constraintTop_toTopOf="@+id/details_edit_away_score"/>
  <EditText
    android:id="@+id/details_edit_away_score"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:ems="5"
    android:inputType="number"
    android:hint="@string/hint_away_score"
    android:textAlignment="center"
    app:layout_constraintStart_toEndOf="@+id/details_guideline"
    app:layout_constraintTop_toBottomOf="@id/details_edit_home_score"/>
  <CheckBox
    android:id="@+id/details_check_final"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:text="@string/is_final"
    app:layout_constraintEnd_toStartOf="@+id/details_guideline"
    app:layout_constraintTop_toBottomOf="@id/details_text_away"/>
  <TextView
    android:id="@+id/details_text_error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textColor="@color/colorError"
    app:layout_constraintBottom_toTopOf="@+id/details_button_update"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
  <Button
    android:id="@+id/details_button_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/colorAccent"
    android:text="@string/update"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
  <android.support.constraint.Guideline
    android:id="@+id/details_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="165dp"
    app:layout_constraintGuide_end="180dp"
    app:layout_constraintGuide_percent=".5"/>

</android.support.constraint.ConstraintLayout>